--- a/package.json
+++ b/package.json
@@ -7,5 +7,25 @@
     "react": "15.3.2",
     "rest": "2.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0"
+  },
+  "main": "webpack.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/theesen/mtg-tournament.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/theesen/mtg-tournament/issues"
+  },
+  "homepage": "https://github.com/theesen/mtg-tournament#readme",
+  "description": ""
 }
